--- a/frontend/src/assets/css/navigation/sidebar.css
+++ b/frontend/src/assets/css/navigation/sidebar.css
@@ -10,25 +10,25 @@
   background: #fefefe;
 }
 
-.menuSection {
+#sidebar .menuSection {
   margin-top: 1rem;
 }
 
-.menuSection:first-child {
+#sidebar .menuSection:first-child {
   margin-top: 0;
 }
 
-.menuSection h3 {
+#sidebar .menuSection h3 {
   color: var(--gray-300);
   font-size: 14px;
 }
 
-.menuSection ul {
+#sidebar .menuSection ul {
   list-style: none;
   padding: 0px;
 }
 
-.menuSection ul li a {
+#sidebar .menuSection ul li a {
   color: var(--gray-600);
   padding: 6px;
   padding-left: 10px;
@@ -41,10 +41,10 @@
   text-decoration: none;
 }
 
-.menuSection ul li a:hover {
+#sidebar .menuSection ul li a:hover {
   color: var(--blue-600);
 }
 
-.menuSection ul li a span {
+#sidebar .menuSection ul li a span {
   margin-left: 0.4rem;
 }
