--- a/frontend/src/assets/css/common/modals.css
+++ b/frontend/src/assets/css/common/modals.css
@@ -76,12 +76,12 @@
   text-align: left;
 }
 
-.phoneInputBox {
-  display: flex;
-}
-
 .smallFlag {
   margin-right: 0.3rem;
+}
+
+.phoneInputBox {
+  display: flex !important;
 }
 
 .phoneInputBox > .inputText {
