--- a/frontend/src/assets/css/navigation/sidebar.css
+++ b/frontend/src/assets/css/navigation/sidebar.css
@@ -19,8 +19,9 @@
 }
 
 #sidebar .menuSection h3 {
-  color: var(--gray-300);
+  color: var(--gray-500);
   font-size: 14px;
+  font-weight: bold;
 }
 
 #sidebar .menuSection ul {
