--- a/frontend/src/assets/css/common/modals.css
+++ b/frontend/src/assets/css/common/modals.css
@@ -22,7 +22,6 @@
 .viewportModalContent .title {
   font-weight: bold;
   font-size: 1.4rem;
-  color: var(--gray-900);
   margin-bottom: 1rem;
 }
 
@@ -86,4 +85,22 @@
 
 .phoneInputBox > .inputText {
   flex-grow: 1;
+}
+
+.phoneInputBox .selectCountryCode {
+  min-width: max-content;
+}
+
+.viewportModalContent .deleteMessage {
+  text-align: justify;
+  padding: 1rem 1.5rem;
+  background-color: #f7e1d2;
+  border-left: 3px solid #f85c2d;
+  color: #f85c2d;
+  margin: 1.5rem 0;
+}
+
+.viewportModalContent .deleteMessage p:first-child {
+  margin-bottom: 0.75rem;
+  font-weight: bold;
 }
