--- a/frontend/src/assets/css/common/modals.css
+++ b/frontend/src/assets/css/common/modals.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
   z-index: 999;
@@ -32,6 +32,7 @@
   padding: 2rem 3rem;
   text-align: center;
   position: relative;
+  border-radius: var(--border-radius);
 }
 
 .closeTimesBtnBox {
