--- a/frontend/src/assets/css/common/detalle.css
+++ b/frontend/src/assets/css/common/detalle.css
@@ -1,71 +1,112 @@
-/* DETAILS */
-.detailView > .card {
-  margin-bottom: 1.5rem;
-}
-
-.smallSubtitle {
-  color: var(--gray-500);
-  font-size: 14px;
-  margin-bottom: 0;
-  font-weight: bold;
-}
-
-.detalleHeader h1 {
-  font-size: 1.3rem;
-  margin-bottom: 0;
-  font-weight: bold;
-}
-
-.detalleBody {
-  display: flex;
-  flex-wrap: wrap;
-}
-.detalleBody div {
-  margin-right: 4rem;
-}
-.detalleBody p {
-  margin-bottom: 0;
-}
-
-.detalleBody div:last-child {
-  margin-right: 0;
-}
-
-.productDescBox {
-  margin-top: 0.8rem;
-}
-
-.detailsBox {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-}
-
-/* RELATIONS */
-.relationsDetails {
-  margin-right: 1.5rem;
-  width: calc(65% - 1.5rem);
-  padding: 1rem;
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
+/* MAIN */
+.detailView {
+  background-color: var(--glass-blue);
+  padding-top: 20px;
+  padding-left: 20px;
   overflow: hidden;
+  border-radius: var(--border-radius);
+  min-height: 100%;
 }
 
-.relationsDetails .card {
-  box-shadow: none;
-  border: 1px solid var(--gray-200);
+.detailView .box {
+  margin-right: 20px;
+}
+
+.detailView .box section {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--text-light);
   margin-bottom: 1rem;
 }
 
-.relationsDetails > .card:last-child {
+/* CONTACT */
+.detailView .box .contactList {
+  display: flex;
+  flex-direction: column;
+}
+
+.detailView .box .contactList h2 {
+  font-size: 15px;
+}
+
+.detailView .box .contactList button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: none;
+  border: none;
+  padding: 0.7rem 1.1rem;
+  transition: all var(--transition-time) ease;
+  border-radius: var(--border-radius);
+}
+
+.detailView .box .contactList button div:first-child {
+  display: flex;
+  align-items: center;
+  margin-right: 3rem;
+}
+
+.detailView .box .contactList button:last-child {
+  border-bottom: none;
+}
+
+.detailView .box .contactList button:hover {
+  background: var(--glass-purple);
+}
+
+.detailView .box .contactList button svg {
+  transition: all var(--transition-time) ease;
+}
+
+.detailView .box .contactList button:hover svg {
+  color: var(--main-purple);
+}
+
+.detailView .box .contactList > button p {
+  font-size: 12px;
+  text-align: end;
+}
+
+.detailView .box .contactList button svg {
+  margin-right: 0.5rem;
+  color: var(--text-gray);
+}
+
+/* CONTACT - HISTORY */
+.detailView .contactoHistBox {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.detailView .contactoHistBox div:first-child {
+  flex-grow: 1;
+}
+
+.detailView .contactoHistBox div:last-child {
+  flex-grow: 10;
+}
+
+/* DETAILS WITHOUT CONTACT */
+.detailView .detailsContent > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.7rem;
+  border-radius: var(--border-radius);
+  transition: all var(--transition-time) ease;
+}
+
+.detailView .detailsContent p {
   margin-bottom: 0;
 }
 
-.relationTitle {
-  font-weight: bold;
+.detailView .detailsContent p:first-child {
+  margin-right: 2rem;
 }
 
-/* ASIDE */
-.asideDetails {
-  width: 35%;
+.detailView .detailsContent p:last-child {
+  text-align: end;
+}
+
+.detailView .contactoHistBox .productDescBox {
+  display: inline-block;
 }
